--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0",
+    "emoji-picker-react": "^3.4.4",
     "firebase": "^8.4.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
